argocd-apps/media-server-stack/prowlarr/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: prowlarr
  labels:
    app: prowlarr
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: prowlarr
