argocd-apps/media-server-stack/prowlarr/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr
  namespace: prowlarr
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - prowlarr.lab-home.com
      secretName: prowlarr-tls
  rules:
  - host: prowlarr.lab-home.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr
            port:
              number: 80
